--- a/styles/projects.css
+++ b/styles/projects.css
@@ -93,7 +93,7 @@
 @media (max-width: 1000px) {
 
   #project-view {
-    margin: 4rem 0;
+    margin: 5rem 0;
   }
 
   .project-div {
